[gd_scene load_steps=3 format=2]

[ext_resource path="res://DatePractice.tres" type="DynamicFont" id=1]
[ext_resource path="res://SceneChangeButtons.gd" type="Script" id=2]

[node name="Buttons" type="Node2D"]
script = ExtResource( 2 )

[node name="Multiply" type="Button" parent="."]
margin_left = 1088.0
margin_top = 64.0
margin_right = 1274.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "multiply"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divide" type="Button" parent="."]
margin_left = 1088.0
margin_top = 128.0
margin_right = 1274.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 1 )
text = "divide"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dates" type="Button" parent="."]
margin_left = 1088.0
margin_top = 192.0
margin_right = 1274.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 1 )
text = "dates"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Multiply" to="." method="_on_Multiply_pressed"]
[connection signal="pressed" from="Divide" to="." method="_on_Divide_pressed"]
[connection signal="pressed" from="Dates" to="." method="_on_Dates_pressed"]
